--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.10.1",
     "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
+    "boostrap": "^2.0.0",
     "dotenv": "^8.2.0",
     "node-sass": "^4.13.1",
     "nuxt": "^2.0.0",
