ignore設定・コメント記載

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@nuxtjs/google-analytics": "^2.2.3",
     "@types/axios": "^0.14.0",
+    "eslint-loader": "^4.0.2",
     "html-loader": "^1.1.0",
     "ts-loader": "^7.0.1",
     "typescript": "^3.8.3",
