--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.10.1",
+    "@nuxtjs/dotenv": "^1.4.1",
     "axios": "^0.19.2",
     "boostrap": "^2.0.0",
     "dotenv": "^8.2.0",
