--- a/package.json
+++ b/package.json
@@ -11,26 +11,39 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.10.1",
+    "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/dotenv": "^1.4.1",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "boostrap": "^2.0.0",
-    "dotenv": "^8.2.0",
-    "node-sass": "^4.13.1",
-    "nuxt": "^2.0.0",
+    "core-js": "^3.15.2",
+    "dot-prop": "^4.2.1",
+    "dotenv": "^8.6.0",
+    "elliptic": "^6.5.4",
+    "fsevents": "^2.3.2",
+    "glob-parent": "^5.1.2",
+    "http-proxy": "^1.18.1",
+    "is-svg": "^3.0.0",
+    "lodash": "^4.17.21",
+    "node-fetch": "^2.6.1",
+    "node-sass": "^4.14.1",
+    "nuxt": "^2.15.7",
+    "postcss": "^7.0.36",
     "sass-loader": "^8.0.2",
     "save-dev": "0.0.1-security",
-    "vue": "^2.6.11",
-    "vue-class-component": "^7.2.3",
-    "vue-property-decorator": "^8.4.2"
+    "serialize-javascript": "^2.1.2",
+    "vue": "^2.6.14",
+    "vue-class-component": "^7.2.6",
+    "vue-property-decorator": "^8.5.1",
+    "y18n": "^4.0.3",
+    "yargs-parser": "^5.0.1"
   },
   "devDependencies": {
-    "@nuxtjs/google-analytics": "^2.2.3",
+    "@nuxtjs/google-analytics": "^2.4.0",
     "@types/axios": "^0.14.0",
     "eslint-loader": "^4.0.2",
-    "html-loader": "^1.1.0",
-    "ts-loader": "^7.0.1",
-    "typescript": "^3.8.3",
-    "webpack": "^4.43.0"
+    "html-loader": "^1.3.2",
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.10",
+    "webpack": "^4.46.0"
   }
 }
