--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "http-proxy": "^1.18.1",
     "is-svg": "^3.0.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "node-fetch": "^2.6.1",
     "node-sass": "^4.14.1",
     "nuxt": "^2.15.7",
