--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/dotenv": "^1.4.1",
+    "@nuxtjs/redirect-module": "^0.3.1",
     "axios": "^0.21.1",
     "boostrap": "^2.0.0",
     "core-js": "^3.15.2",
